--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-pages-brunch",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "Adds HTMLMinifier support to brunch",
   "author": "Anatoly Ostrovsky (anatolyostrovsky@gmail.com)",
   "homepage": "https://github.com/tolyo/html-pages-brunch",
@@ -10,16 +10,21 @@
   },
   "main": "./lib/index",
   "scripts": {
-    "test": "node_modules/.bin/mocha"
+    "test": "eslint index.js && mocha"
   },
+  "files": ["index.js"],
   "dependencies": {
     "html-minifier": "~2.0.0",
     "lodash": "*",
-    "mkdirp": "~0.5.1"
+    "mkdirp": "~0.5.1",
+    "babel-core": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-node-env-inline": "^6.1.18",
     "mocha": "~2.3.4",
-    "chai": "~3.4.1"
+    "chai": "~3.4.1",
+    "eslint": "^2.0.0"
   },
   "bugs": {
     "url": "https://github.com/tolyo/html-pages-brunch/issues"
