--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-pages-brunch",
-  "version": "2.3.1",
+  "version": "2.3.2",
   "description": "Adds HTMLMinifier support to brunch",
   "author": "Anatoly Ostrovsky (anatolyostrovsky@gmail.com)",
   "homepage": "https://github.com/tolyo/html-pages-brunch",
@@ -14,7 +14,8 @@
   },
   "files": ["index.js"],
   "dependencies": {
-    "html-minifier": "~3.0.1"
+    "html-minifier": "~3.0.1",
+    "mkdirp": "^0.5.0"
   },
   "devDependencies": {
     "mocha": "~2.3.4",
