--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "scripts": {
     "test": "eslint index.js && mocha"
   },
-  "files": ["index.js"],
+  "files": [
+    "index.js"
+  ],
   "dependencies": {
+    "front-matter": "^2.1.0",
     "html-minifier": "~3.0.1",
     "mkdirp": "^0.5.0"
   },
