--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-pages-brunch",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "description": "Adds HTMLMinifier support to brunch",
   "author": "Anatoly Ostrovsky (anatolyostrovsky@gmail.com)",
   "homepage": "https://github.com/tolyo/html-pages-brunch",
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "front-matter": "^2.1.0",
-    "html-minifier": "~3.0.1",
+    "html-minifier": "^3.1.1",
     "mkdirp": "^0.5.0"
   },
   "devDependencies": {
