--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-pages-brunch",
-  "version": "2.7.0",
+  "version": "2.8.0",
   "description": "Adds HTMLMinifier support to brunch",
   "author": "Anatoly Ostrovsky (anatolyostrovsky@gmail.com)",
   "homepage": "https://github.com/tolyo/html-pages-brunch",
@@ -16,14 +16,14 @@
     "index.js"
   ],
   "dependencies": {
-    "front-matter": "^2.3.0",
-    "html-minifier": "^3.5.8",
-    "mkdirp": "^0.5.0"
+    "front-matter": "3.0.1",
+    "html-minifier": "3.5.21",
+    "mkdirp": "0.5.1"
   },
   "devDependencies": {
-    "mocha": "~5.0.0",
-    "chai": "~4.1.2",
-    "eslint": "^4.16.0"
+    "mocha": "~6.0.0",
+    "chai": "~4.2.0",
+    "eslint": "^5.15.0"
   },
   "bugs": {
     "url": "https://github.com/tolyo/html-pages-brunch/issues"
